fix spacing and full width layout

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -96,3 +96,20 @@ body {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.categories-section {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.author-section {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  border: solid #f7f7f7 1px;
+  padding: 15px;
+}
+
+.footnotes {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
